<resources>
    <string name="app_name">Volume Calculator</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cube_text">Cube</string>
    <string name="rectangular_prism_text">Rectangular Prism</string>
    <string name="triangular_prism_text">Triangular Prism</string>
    <string name="rectangular_pyramid_text">Rectangular Pyramid</string>
    <string name="triangular_pyramid_text">Triangular Pyramid</string>
    <string name="cylinder_text">Cylinder</string>
    <string name="cone_text">Cone</string>
    <string name="sphere_text">Sphere</string>

    <string name="edge_text">Edge</string>
    <string name="base_length_text">Base Length</string>
    <string name="base_width_text">Base Width</string>
    <string name="height_text">Height</string>
    <string name="triangle_base_text">Triangle Base</string>
    <string name="triangle_height_text">Triangle Height</string>
    <string name="radius_text">Radius</string>

    <string name="submit_text">Submit</string>
    <string name="result_text">Result</string>
    <string name="error_text">Fill the required field</string>

    <string name="ad_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
</resources>
