<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.revmedia.volumecalculator.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/buttonCube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cube_text"
                style="Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/buttonRectangularPrism"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rectangular_prism_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonTriangularPrism"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangular_prism_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonRectangularPyramid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rectangular_pyramid_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonTriangularPyramid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangular_pyramid_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonCylinder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cylinder_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonCone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cone_text"
                style="Widget.AppCompat.Button"
                />
            <Button
                android:id="@+id/buttonSphere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sphere_text"
                style="Widget.AppCompat.Button"
                />

        </LinearLayout>

    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_unit">
    </com.google.android.gms.ads.AdView>

</FrameLayout>
